# tiny-vlm-lab

./: .gitignore  CLAUDE.md  README.md  infer.py  pyproject.toml  train.py
examples/: toy_data.json
tiny_vlm/: __init__.py  data.py  model.py
