[project]
name = "tiny-vlm"
version = "0.1.0"
description = "A minimal LLaVA-style Vision-Language Model from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "pillow>=10.0.0",
    "accelerate>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_vlm"]
